--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,6 +12,7 @@ body{
     background-image: url(./assets/matthias-mullie-sfXBkd7XcB0-unsplash.jpg);
     background-size: cover;
     overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 .wrapper{
@@ -45,14 +46,14 @@ body{
 
 .box{
     height: 300px;
-    width: 500px;
+    width: 600px;
     box-shadow: 0 0 10px 1px black;
     z-index: 2;
 }
 
 .box__item{
     height: 80%;
-    width: 100%;
+    width: 75%;
     background-color: rgb(87, 84, 84);
     display: flex;
     align-items: center;
@@ -60,6 +61,40 @@ body{
     flex-direction: column;
     color: white;
 }
+
+.box__item2{
+    height: 80%;
+    width: 25%;
+    
+}
+
+@keyframes colorChange{
+    from{
+        color: white;
+    }
+    to{
+        color: black;
+    }
+}
+
+.box__itemik{
+    min-height: 100%;
+    width: 100%;
+    background-color: rgb(87, 84, 84);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    scroll-behavior: smooth;
+    animation: colorChange 5s both infinite alternate linear;
+}
+
+#domain, .iconify{
+    font-size: 20px;
+    margin-right: 15px;
+}
+
 
 #number{
     font-size: 25px;
@@ -105,6 +140,12 @@ input::-webkit-inner-spin-button {
 @media all and (max-width: 500px){
     .box{
         width: 300px;
+    }
+    .box__item2{
+        display: none;
+    }
+    .box__item{
+        width: 100%;
     }
     .header{
         font-size: 20px;
